--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
-<htmL> 
+<htmL lang="en-US"> 
 </head>
 <title> Mentincts--Home </title>
+<style>
+body {
+	font-family: 'Brush  Script MT', cursive;
+	color: whitesmoke;
+} 
+h1 {
+	color: indianred;
+	text-align: center;
+}
+</style>
+
 </head>
-<body>
-<h1>Something Something Something</h1>
-<h2>This is also something whoopie!</h2>
-<p>wow this so important</p>   
-<img src="dawg.jpg">
 
-
+<body style="background-color:darkslategray;">
+<h1 style="font-size:300%;" style="text-align:center;">Mento Mentincts Super Awesome and Cool Website</h1>
+<hr> 
+<!the title thingy on the image is for hover and "a" is for links to sites and make sure to have https>
+<a href="https://x.com/thementincts">
+<img title="that dawg" src="dawg.jpg" width="500" height="600">
+</a>
+<p style="font-size:15px;"> wow this is like  15px now its  time for line break</p>
+<hr> 
+<p style="font-size:15px;"> what a cool and awesome line break that was</p> 
+<p style="font-size:15px;"> i lied this is <br> a line break the one above is another  thing</p>
 </body>
-</htmL>
+</htmL>    
