--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <htmL lang="en-US"> 
-</head>
+<head>
 <title> Mentincts--Home </title>
+<link rel="icon" type="image" href="favicon.ico">
 <style>
 body {
 	font-family: 'Brush  Script MT', cursive;
@@ -16,8 +17,9 @@ h1 {
 
 <body style="background-color:darkslategray;">
 <h1 style="font-size:300%;" style="text-align:center;">Mento Mentincts Super Awesome and Cool Website</h1>
+<h2 style="font-size:20px;"> <a href="movies and shows.html">movies and show i like :3</a>
 <hr> 
-<!the title thingy on the image is for hover and "a" is for links to sites and make sure to have https>
+<! get out of my comments you pervert> 
 <a href="https://x.com/thementincts">
 <img title="that dawg" src="dawg.jpg" width="500" height="600">
 </a>
