--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ h1 {
 
 <body style="background-color:darkslategray;">
 <h1 style="font-size:300%;" style="text-align:center;">Mento Mentincts Super Awesome and Cool Website</h1>
-<h2 style="font-size:20px;"> <a href="movies and shows.html">movies and show i like :3</a>
+<h2 style="font-size:20px;"> <a href="movshow.html">movies and show i like :3</a>
 <hr> 
 <! get out of my comments you pervert> 
 <a href="https://x.com/thementincts">
